saas-1554 - compositions to sdk
